# fubuki

./: Cargo.toml  README.md  bun.lockb  package.json  rust-toolchain.toml
server/api/: caption.post.ts  speech.post.ts
server/routes/: index.ts
server/utils/: cache.ts  image.ts  meme.ts
src/: index.ts  main.rs
src/fn/: cache.ts  images.ts
src/handlers/: meme.ts
src/middlewares/: image.rs
src/routes/: caption.rs  circle.rs  convert.rs  invert.rs  mod.rs  opacity.rs  speech.rs
src/types/: bodies.ts
src/utils/: http.rs
