[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.8.0"
serde_json = "1.0.120"
serde = { version = "1.0.204", features = ["derive"] }
ril = { version = "0", features = ["all"] }
reqwest = "0.12.5"
anyhow = "1.0.86"
md5 = "0.7.0"
futures-util = "0.3.30"
sysinfo = "0.30.13"
tokio = { version = "1.38.1", features = ["rt-multi-thread"] }
async-trait = "0.1.81"
